--- a/signup.html
+++ b/signup.html
@@ -16,6 +16,13 @@
 
 
     <style>
+        .btn-block {
+            background-color: black;
+            color: whitesmoke;
+        }
+        body {
+            background-image: url("/images/wall.jpg")
+        }
       .bd-placeholder-img {
         font-size: 1.125rem;
         text-anchor: middle;
